--- a/Core/View/Master/PanelController.html.twig
+++ b/Core/View/Master/PanelController.html.twig
@@ -171,11 +171,13 @@
                 <div class="dropdown-menu">
                     <h6 class="dropdown-header">{{ i18n.trans('options-button-header') }}</h6>
                     {% for viewName, view in fsc.views %}
-                        {% if view.settings.active and view.columns is not empty %}
-                            <a class="dropdown-item"
-                               href="EditPageOption?code={{ viewName }}&url={{ firstView.model.url() | url_encode }}">
-                                <i class="{{ view.icon }} fa-fw" aria-hidden="true"></i> {{ view.title }}
-                            </a>
+                        {% if view.settings.active and view.settings.btnOptions %}
+                            {% if view.columns is not empty %}
+                                <a class="dropdown-item"
+                                   href="EditPageOption?code={{ viewName }}&url={{ firstView.model.url() | url_encode }}">
+                                    <i class="{{ view.icon }} fa-fw" aria-hidden="true"></i> {{ view.title }}
+                                </a>
+                            {% endif %}
                         {% endif %}
                     {% endfor %}
                 </div>
